--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,10 +1,10 @@
 
 @media only screen and (min-width: 576px) {
-    .col-space {
+    /* .col-space {
         width: 100%;
         height: 100%;
         background-color: #62277f;
-    }
+    } */
 }
 
 @media only screen and (min-width: 768px) {
