--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+.col-space {
+    width: 100%;
+    height: 100%;
+    background-color: #62277f;
+}
+
 .menu {
     height: 50px;
     background-color: grey;
