--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,3 +6,67 @@
     width: 100px;
     text-align: center;
 }
+
+.mtb-3 {
+    margin-bottom: 1rem!important;
+}
+
+.d-f input {
+    width: 100%;
+}
+
+label {
+    display: block;
+    font-size: 13px;
+    font-family: 'Source Sans Pro Bold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #555;
+    margin-bottom: 10px;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    height: 38px;
+    padding: 8px 14px;
+    font-size: 15px;
+    line-height: 1.42857143;
+    color: #555555;
+    background-color: #ffffff;
+    background-image: none;
+    border: 2px solid #DDD;
+    border-radius: 0 !important;
+    -webkit-transition: border-color ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s;
+    transition: border-color ease-in-out .15s;
+}
+
+.input-focus:focus {
+    outline: none;
+    border: 2px solid #555555;
+}
+
+.textarea {
+    height: auto;
+}
+
+.button {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+    margin: 5px;
+    padding: 0 22px;
+    font-size: 14px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #396db4;
+    color: #FFF;
+    font-family: 'Source Sans Pro Semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: none;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
+}
