--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -40,4 +40,34 @@
     .list a {
         text-decoration: none;
     }
+
+    /* start contact */
+    .contact {
+        display: flex;
+    }
+
+    .mtb-3 {
+        margin-bottom: 0rem!important;
+    }
+
+    .d-f > div{
+        width: 48%;
+    }
+
+    .d-f {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .form {
+        flex: .5;
+        margin-right: 20px;
+    }
+
+    .map {
+        flex: .5;
+        background-color: blue;
+        display: block;
+    }
+    /* end contact */
 }
