--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -62,7 +62,7 @@ label {
     font-size: 14px;
     height: 40px;
     line-height: 40px;
-    background-color: #396db4;
+    background-color: #61257f;
     color: #FFF;
     font-family: 'Source Sans Pro Semibold', sans-serif;
     text-transform: uppercase;
