--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,48 @@
     padding: 0;
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(
+        180deg
+        , rgba(30,30,32,70%) 0%, rgba(255,255,255,70%) 100%);
+    z-index: 99;
+}
+
+.header__div{
+    opacity: .99;
+    padding: 12px 20px;
+}
+
+#close {
+    margin-top: 4px;
+}
+
+.list-mobile {
+    list-style-type: none;
+    padding: 0;
+    margin: 18px 14px;
+    background: white;
+    border-radius: 8px;
+}
+
+.list-mobile .item {
+    padding: 15px;
+    border-bottom: 1px solid hsl(0deg 0% 48% / 17%);
+}
+
+.list-mobile .item .link {
+    text-decoration: none;
+    color: hsl(0, 0%, 0%);
+    font-family: 'Commissioner', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+}
+
 .col-space {
     width: 100%;
     height: 100%;
@@ -101,7 +143,8 @@ h1 {
     width: 100%;
     height: 250px;
     object-fit: cover;
-    object-position: center;
+    /* object-position: center; */
+    object-position: right;
 }
 
 .txt-center {
@@ -134,4 +177,8 @@ h1 {
 
 .footer-list {
     list-style-type: none;
+}
+
+.col-pd {
+    padding-left: 150px;
 }
