--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -12,6 +12,14 @@
         /* background-image: url(../media/desctop.png); */
     }
 
+    .card-img {
+        height: 250px;
+    }
+
+    .card {
+        height: 365px;
+    }
+
     .input-group {
         display: flex;
         justify-content: flex-start;
