--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@
 }
 
 .col-space {
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
     height: 100%;
     background-color: #62277f;
 }
@@ -159,7 +160,24 @@ h1 {
 .del-rat {
     display: flex;
     justify-content: space-around;
-    padding: 6px 0;
+    margin-top: 6px;
+    position: relative;
+}
+
+.del-rat::before {
+    content: '';
+    height: 100%;
+    width: 2px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .text-center {
