--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Hind Madurai', sans-serif;
 }
 
 .modal {
@@ -9,15 +10,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(
-        180deg
-        , rgba(30,30,32,70%) 0%, rgba(255,255,255,70%) 100%);
-    z-index: 99;
+    background-color: #ffffff;
+    text-align: center;
+    z-index: 999;
 }
 
 .header__div{
-    opacity: .99;
-    padding: 12px 20px;
+    padding: 26px 30px;
 }
 
 #close {
@@ -39,33 +38,34 @@
 
 .list-mobile .item .link {
     text-decoration: none;
-    color: hsl(0, 0%, 0%);
+    color: #61257f;
     font-family: 'Commissioner', sans-serif;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .col-space {
     width: 100%;
     margin: 0 auto;
-    height: 100%;
     background-color: #62277f;
+    position: relative;
 }
 
 .menu {
-    height: 50px;
-    background-color: grey;
+    height: 80px;
+    background-color: #ffffff;
     position: fixed;
-    z-index: 9;
+    z-index: 99;
     top: 0;
     right: 0;
     left: 0;
+    box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 }
 
 .menu > div {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0 30px;
     align-items: center;
     height: 100%;
 }
@@ -88,22 +88,29 @@
     display: grid;
     place-content: center;
     background-color: rgb(170, 170, 83);
-    /* background-image: url(../media/mobile.png); */
+    background-image: url(../media/mobile.png);
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
     height: 400px;
-    margin-top: 50px;
+    margin-top: 80px;
     position: relative;
 }
 
-/* .header::before {
+.header::before {
     content: '';
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: red;
-} */
+    background-color: #61257f47;
+}
+
+.header--div {
+    z-index: 9;
+    color: white;
+}
 
 h1 {
     font-size: min(9vw, 75px);
@@ -130,38 +137,75 @@ h1 {
 .submit {
     border: none;
     height: 100%;
-    background: #62277f;
+    background: #ffcc00;
     color: white;
     padding: 0 10px;
     font-size: 15px;
 }
 
-.card {
-    height: 430px;
-}
-
 .card-img {
     width: 100%;
-    height: 300px;
+    height: 100%;
     object-fit: cover;
     /* object-position: center; */
     object-position: right;
 }
 
-.txt-center {
-    text-align: center;
+.to-profile {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: rgb(97 37 127 / 80%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity .5s;
+    
+}
+
+.to-profile a {
+    text-decoration: none;
     color: #ffffff;
 }
 
+.img-more {
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: top .3s cubic-bezier(0, 0.41, 0.59, 0.97);
+}
+
+.col-space:hover .to-profile {
+    opacity: 1;
+}
+
+.col-space:hover .img-more {
+    top: 50%;
+}
+.txt-center {
+    text-align: center;
+    color: #ffffff;
+    height: 95px;
+    padding: 5px;
+}
+
+.fix-height {
+    height: 250px;
+}
+
 .name {
-    padding: 15px;
+    padding-top: 10px;
 }
 
 .del-rat {
     display: flex;
     justify-content: space-around;
-    margin-top: 6px;
     position: relative;
+    top: 8px;
 }
 
 .del-rat::before {
@@ -182,6 +226,28 @@ h1 {
 
 .text-center {
     text-align: center;
+}
+
+.btn-load{
+    border: 0;
+    outline: none;
+    border-radius: 0;
+    padding: 15px 0;
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    background: #396db4;
+    color: #ffffff;
+    transition: all 0.5s ease;
+    -webkit-appearance: none;
+    width: 100%;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
+    border-bottom: 3px solid rgba(0,0,0,0.15);
+}
+
+.btn-load:focus {
+    background: #ffcc00;
 }
 
 .footer {
