--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -93,6 +93,14 @@
     }
 
     /* end footer */
+
+    /* call btn */
+
+    .section-call {
+        display: none;
+    }
+
+    /* end call btn */
 }
 
 @media (min-width: 992px) {
