--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,3 +272,22 @@ h1 {
     text-align: center;
     margin: 18px 0;
 }
+
+.section-call {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #7ED321;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-call a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 21px;
+    letter-spacing: 5px;
+}
