--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -96,9 +96,9 @@
 
     /* call btn */
 
-    .section-call {
+    /* .section-call {
         display: none;
-    }
+    } */
 
     /* end call btn */
 }
